--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -260,16 +260,41 @@ let y = 56;
     pdf.text(`${dep}: $${v.venta.toFixed(2)}  Utilidad:$${v.utilidad.toFixed(2)} (${(v.utilidad/v.venta*100).toFixed(1)}%)`,12,y);
     y+=5; if(y>260){pdf.addPage();y=20;}
   }
-  y+=5; // 🔹 Resumen de Tickets
-y += 5;
+// 🔹 Resumen de Tickets
+y += 8;
+pdf.setFont("helvetica", "bold");
 pdf.text("Resumen de Tickets:", 10, y);
 y += 6;
-pdf.setFont("helvetica", "bold");
 pdf.text("Folio", 12, y);
 pdf.text("Hora", 45, y);
 pdf.text("Total", 90, y);
 pdf.text("Utilidad", 130, y);
 pdf.setFont("helvetica", "normal");
+y += 5;
+
+let totalTickets = 0;
+let totalUtilidad = 0;
+
+for (const n of r.porNota.slice(0, 30)) {
+  pdf.text(n.folio || "—", 12, y);
+  pdf.text(n.hora || "—", 45, y);
+  pdf.text(`$${(n.total || n.resumen_financiero?.total || 0).toFixed(2)}`, 90, y);
+  pdf.text(`$${(n.utilidad || 0).toFixed(2)}`, 130, y);
+  totalTickets += n.total || n.resumen_financiero?.total || 0;
+  totalUtilidad += n.utilidad || 0;
+  y += 5;
+  if (y > 260) { pdf.addPage(); y = 20; }
+}
+
+// 🔹 Totales finales
+y += 3;
+pdf.setFont("helvetica", "bold");
+pdf.text("——————————————————————————————————————", 10, y);
+y += 6;
+pdf.text(`TOTAL DÍA: $${totalTickets.toFixed(2)}   UTILIDAD TOTAL: $${totalUtilidad.toFixed(2)}`, 12, y);
+pdf.setFont("helvetica", "normal");
+
+// 🔹 Top de Artículos Más Vendidos
 y += 10;
 pdf.setFont("helvetica", "bold");
 pdf.text("Top de Artículos Más Vendidos:", 10, y);
@@ -294,7 +319,6 @@ for (const [nombre, datos] of topArticulos) {
   y += 5;
   if (y > 260) { pdf.addPage(); y = 20; }
 }
-
 y += 5;
 
 let totalTickets = 0;
