--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -32,7 +32,6 @@
     }
     button[disabled] { background:#999; cursor:not-allowed; }
 
-    /* Modal spinner overlay */
     #overlay {
       display:none;
       position:fixed;
@@ -79,20 +78,16 @@
   </tbody>
 </table>
 
-<!-- Overlay minimalista PROVSOFT -->
 <div id="overlay">
   <div class="spinner"></div>
   ⏳ Procesando corte, generando PDF y enviando a Telegram...
 </div>
 
-<!-- Canvas invisibles para gráficas -->
 <div id="graficaDeptos" style="display:none;width:600px;height:400px;"><canvas id="canvasDeptos"></canvas></div>
-<div id="graficaNotas" style="display:none;width:600px;height:400px;"><canvas id="canvasNotas"></canvas></div>
-<div id="graficaHoras" style="display:none;width:600px;height:400px;"><canvas id="canvasHoras"></canvas></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, collection, getDocs, query, where, updateDoc, doc, addDoc, serverTimestamp } 
+import { getFirestore, collection, getDocs, query, where, addDoc, serverTimestamp } 
 from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 document.addEventListener("DOMContentLoaded", async () => {
@@ -110,8 +105,6 @@ document.addEventListener("DOMContentLoaded", async () => {
   const selectRuta = document.getElementById("selectRuta");
   const tbody = document.getElementById("tbodyCortes");
   const overlay = document.getElementById("overlay");
-
-  let corteActual = null;
 
   async function cargarRutas() {
     const snap = await getDocs(collection(db, "rutas_venta"));
@@ -133,27 +126,24 @@ document.addEventListener("DOMContentLoaded", async () => {
       tbody.innerHTML = "<tr><td colspan='5' style='text-align:center;color:#999;'>No hay cortes pendientes</td></tr>";
       return;
     }
-// 🔹 Calcular totales y utilidad del día
-const totalHoy = ventas.reduce((a, v) => a + (v.total || v.resumen_financiero?.total || 0), 0);
-const utilidadHoy = ventas.reduce((a, v) => a + (v.utilidad_total || 0), 0);
-const ultima = ventas.sort((a, b) => (b.fecha_txt || '').localeCompare(a.fecha_txt || ''))[0]?.fecha_txt || "—";
+    const totalHoy = ventas.reduce((a, v) => a + (v.total || v.resumen_financiero?.total || 0), 0);
+    const utilidadHoy = ventas.reduce((a, v) => a + (v.utilidad_total || 0), 0);
+    const ultima = ventas.sort((a, b) => (b.fecha_txt || '').localeCompare(a.fecha_txt || ''))[0]?.fecha_txt || "—";
 
-// 🔹 Mostrar resumen en tabla
-tbody.innerHTML = `
-  <tr>
-    <td>${ventas[0].atendio || ventas[0].usuario || "—"}</td>
-    <td>${rutaId}</td>
-    <td>$${totalHoy.toFixed(2)}</td>
-    <td>${ultima}</td>
-    <td><button data-ruta="${rutaId}">📊 Hacer Corte</button></td>
-  </tr>
-  <tr style="background:#e8f0fe;font-weight:600;">
-    <td colspan="2" style="text-align:right;">TOTAL GENERAL:</td>
-    <td>$${totalHoy.toFixed(2)}</td>
-    <td>UTILIDAD:</td>
-    <td>$${utilidadHoy.toFixed(2)}</td>
-  </tr>`;
-
+    tbody.innerHTML = `
+      <tr>
+        <td>${ventas[0].atendio || ventas[0].usuario || "—"}</td>
+        <td>${rutaId}</td>
+        <td>$${totalHoy.toFixed(2)}</td>
+        <td>${ultima}</td>
+        <td><button data-ruta="${rutaId}">📊 Hacer Corte</button></td>
+      </tr>
+      <tr style="background:#e8f0fe;font-weight:600;">
+        <td colspan="2" style="text-align:right;">TOTAL GENERAL:</td>
+        <td>$${totalHoy.toFixed(2)}</td>
+        <td>UTILIDAD:</td>
+        <td>$${utilidadHoy.toFixed(2)}</td>
+      </tr>`;
   }
 
   selectRuta.addEventListener("change", e => {
@@ -169,193 +159,179 @@ tbody.innerHTML = `
     const btn = e.target.closest("button[data-ruta]");
     if (!btn) return;
     const rutaId = btn.getAttribute("data-ruta");
-    corteActual = { rutaId };
     overlay.style.display = "flex";
     await generarCorteAnalitico(rutaId);
     overlay.style.display = "none";
-    alert("✅ Corte realizado y PDF enviado a Telegram.");
+    alert("✅ Corte realizado y PDF generado.");
     selectRuta.value = "";
     tbody.innerHTML = "<tr><td colspan='5'>Selecciona una ruta...</td></tr>";
   });
 
-async function generarCorteAnalitico(rutaId) {
-  const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
-  const snap = await getDocs(qVentas);
-  const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-  if (!ventas.length) return;
+  async function generarCorteAnalitico(rutaId) {
+    const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
+    const snap = await getDocs(qVentas);
+    const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
+    if (!ventas.length) return;
 
-  const porDepto = {}, porMetodo = {}, porNota = [], porHora = {}, porArticulo = {};
-  let totalDia=0, totalEfectivo=0, utilidadTotal=0;
+    const porDepto = {}, porNota = [], porArticulo = {};
+    let totalDia = 0, utilidadTotal = 0;
 
-  for (const v of ventas) {
-    totalDia += v.total || v.resumen_financiero?.total || 0;
-    utilidadTotal += v.utilidad_total||0;
-    const hora = (v.fecha_txt||"").split(",")[1]?.trim()||"";
-    porNota.push({
-  folio: v.folio || "—",
-  total: v.total || v.resumen_financiero?.total || 0,
-  utilidad: v.utilidad_total || 0,
-  hora
-});
-    const metodo=v.metodo_pago?.toLowerCase()||"otro";
-    porMetodo[metodo]=(porMetodo[metodo]||0)+(v.total||0);
-    totalEfectivo+=v.total||0;
-    for(const det of(v.detalle||[])){
-      // 🔹 Top de artículos más vendidos
-const nombreArt = det.nombre?.toUpperCase() || "SIN NOMBRE";
-if (!porArticulo[nombreArt]) {
-  porArticulo[nombreArt] = { cantidad: 0, importe: 0 };
-}
-porArticulo[nombreArt].cantidad += det.cantidad || 0;
-porArticulo[nombreArt].importe += det.importe || det.precio_unit * det.cantidad || 0;
+    for (const v of ventas) {
+      totalDia += v.total || v.resumen_financiero?.total || 0;
+      utilidadTotal += v.utilidad_total || 0;
+      const hora = (v.fecha_txt || "").split(",")[1]?.trim() || "";
+      porNota.push({ folio: v.folio || "—", total: v.total || 0, utilidad: v.utilidad_total || 0, hora });
 
-      const dep=det.departamento_info?.nombre?.toUpperCase()||"SIN DEPTO";
-      const venta=det.importe||det.precio_unit*det.cantidad||0;
-      const costo=det.costo_total||det.costo_unit*det.cantidad||0;
-      const util=det.utilidad||(venta-costo);
-      if(!porDepto[dep]) porDepto[dep]={venta:0,costo:0,utilidad:0};
-      porDepto[dep].venta+=venta; porDepto[dep].costo+=costo; porDepto[dep].utilidad+=util;
+      for (const det of (v.detalle || [])) {
+        const nombreArt = det.nombre?.toUpperCase() || "SIN NOMBRE";
+        if (!porArticulo[nombreArt]) porArticulo[nombreArt] = { cantidad: 0, importe: 0 };
+        porArticulo[nombreArt].cantidad += det.cantidad || 0;
+        porArticulo[nombreArt].importe += det.importe || det.precio_unit * det.cantidad || 0;
+
+        const dep = det.departamento_info?.nombre?.toUpperCase() || "SIN DEPTO";
+        const venta = det.importe || det.precio_unit * det.cantidad || 0;
+        const costo = det.costo_total || det.costo_unit * det.cantidad || 0;
+        const util = det.utilidad || (venta - costo);
+        if (!porDepto[dep]) porDepto[dep] = { venta: 0, utilidad: 0 };
+        porDepto[dep].venta += venta;
+        porDepto[dep].utilidad += util;
+      }
     }
-    const horaKey=(v.fecha_txt||"").split(",")[1]?.trim().split(":")[0]+"h";
-    porHora[horaKey]=(porHora[horaKey]||0)+(v.total||0);
+
+    const resumen = {
+      nombreCorte: ventas[0]?.usuarioNombre || ventas[0]?.atendio || "Desconocido",
+      totalDia, utilidadTotal,
+      totalTickets: ventas.length,
+      porDepto, porNota, porArticulo
+    };
+
+    await addDoc(collection(db, "cortes_globales"), {
+      rutaId, fecha: serverTimestamp(), creado_en: new Date().toISOString(),
+      realizado_por: resumen.nombreCorte, total_registros: resumen.totalTickets, resumen
+    });
+
+    await generarPDFyEnviar(resumen, rutaId);
   }
 
-  const resumen = {
-  nombreCorte: ventas[0]?.usuarioNombre || ventas[0]?.atendio || "Desconocido",
-  totalDia, totalEfectivo, utilidadTotal,
-  totalTickets: ventas.length,
-  porDepto, porMetodo, porNota, porHora, porArticulo
-};
+  async function generarPDFyEnviar(r, rutaId) {
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF({ format: "letter", unit: "mm" });
+    pdf.setFont("helvetica", "bold");
+    pdf.text(`CORTE ANALÍTICO – ${rutaId}`, 10, 15);
+    pdf.setFont("helvetica", "normal");
+    pdf.setFontSize(10);
+    pdf.text(`Usuario: ${r.nombreCorte}`, 10, 22);
+    pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 28);
+    pdf.text(`Total Día: $${r.totalDia.toFixed(2)}`, 10, 34);
+    pdf.text(`Utilidad Total: $${r.utilidadTotal.toFixed(2)}`, 10, 40);
+    pdf.text(`Tickets: ${r.totalTickets}`, 10, 46);
 
-  await guardarCorteFirebase(rutaId,resumen);
-  await generarPDFyEnviar(resumen,rutaId);
-}
+    let y = 56;
+    pdf.text("Totales por Departamento:", 10, y); y += 5;
+    for (const [dep, v] of Object.entries(r.porDepto)) {
+      pdf.text(`${dep}: $${v.venta.toFixed(2)}  Utilidad:$${v.utilidad.toFixed(2)} (${(v.utilidad / v.venta * 100).toFixed(1)}%)`, 12, y);
+      y += 5; if (y > 260) { pdf.addPage(); y = 20; }
+    }
 
-async function guardarCorteFirebase(rutaId,resumen){
-  await addDoc(collection(db,"cortes_globales"),{
-    rutaId,
-    fecha:serverTimestamp(),
-    creado_en:new Date().toISOString(),
-    realizado_por:resumen.nombreCorte,
-    total_registros:resumen.totalTickets,
-    resumen
-  });
-}
+    y += 8;
+    pdf.setFont("helvetica", "bold");
+    pdf.text("Resumen de Tickets:", 10, y);
+    pdf.setFont("helvetica", "normal");
+    y += 6;
+    pdf.text("Folio", 12, y);
+    pdf.text("Hora", 45, y);
+    pdf.text("Total", 90, y);
+    pdf.text("Utilidad", 130, y);
+    y += 5;
 
-async function generarPDFyEnviar(r,rutaId){
-  const {jsPDF}=window.jspdf;
-  const pdf=new jsPDF({format:"letter",unit:"mm"});
-  pdf.setFont("helvetica","bold");
-  pdf.text(`CORTE ANALÍTICO – ${rutaId}`,10,15);
-  pdf.setFont("helvetica","normal");
-  pdf.setFontSize(10);
-  pdf.text(`Usuario: ${r.nombreCorte}`,10,22);
-  pdf.text(`Fecha: ${new Date().toLocaleString()}`,10,28);
-pdf.text(`Total Día: $${r.totalDia.toFixed(2)}`,10,34);
-pdf.text(`Utilidad Total: $${r.utilidadTotal.toFixed(2)}`,10,40);
-pdf.text(`Tickets: ${r.totalTickets}`,10,46);
-let y = 56;
-  pdf.text("Totales por Departamento:",10,y); y+=5;
-  for(const[dep,v]of Object.entries(r.porDepto)){
-    pdf.text(`${dep}: $${v.venta.toFixed(2)}  Utilidad:$${v.utilidad.toFixed(2)} (${(v.utilidad/v.venta*100).toFixed(1)}%)`,12,y);
-    y+=5; if(y>260){pdf.addPage();y=20;}
+    let totalTickets = 0, totalUtilidad = 0;
+    for (const n of r.porNota.slice(0, 30)) {
+      pdf.text(n.folio || "—", 12, y);
+      pdf.text(n.hora || "—", 45, y);
+      pdf.text(`$${(n.total || 0).toFixed(2)}`, 90, y);
+      pdf.text(`$${(n.utilidad || 0).toFixed(2)}`, 130, y);
+      totalTickets += n.total || 0;
+      totalUtilidad += n.utilidad || 0;
+      y += 5;
+      if (y > 260) { pdf.addPage(); y = 20; }
+    }
+
+    y += 3;
+    pdf.setFont("helvetica", "bold");
+    pdf.text("——————————————————————————————————————", 10, y);
+    y += 6;
+    pdf.text(`TOTAL DÍA: $${totalTickets.toFixed(2)}   UTILIDAD TOTAL: $${totalUtilidad.toFixed(2)}`, 12, y);
+    pdf.setFont("helvetica", "normal");
+
+    y += 10;
+    pdf.setFont("helvetica", "bold");
+    pdf.text("Top de Artículos Más Vendidos:", 10, y);
+    pdf.setFont("helvetica", "normal");
+    y += 6;
+    const topArticulos = Object.entries(r.porArticulo).sort((a, b) => b[1].importe - a[1].importe).slice(0, 10);
+    pdf.setFont("helvetica", "bold");
+    pdf.text("Artículo", 12, y);
+    pdf.text("Cantidad", 100, y);
+    pdf.text("Importe", 140, y);
+    pdf.setFont("helvetica", "normal");
+    y += 5;
+    for (const [nombre, datos] of topArticulos) {
+      pdf.text(nombre.substring(0, 40), 12, y);
+      pdf.text(`${datos.cantidad}`, 100, y);
+      pdf.text(`$${datos.importe.toFixed(2)}`, 140, y);
+      y += 5; if (y > 260) { pdf.addPage(); y = 20; }
+    }
+
+    const img1 = await graficaDeptos(r.porDepto);
+    pdf.addPage();
+    pdf.text("Gráfica por Departamento", 10, 15);
+    pdf.addImage(img1, "PNG", 15, 20, 180, 100);
+    pdf.text("Reporte generado automáticamente por PROVSOFT POS", 10, 275);
+
+    const blob = pdf.output("blob");
+    const url = URL.createObjectURL(blob);
+    window.open(url, "_blank");
+    const a = document.createElement("a"); a.href = url; a.download = `Corte_${rutaId}.pdf`; a.click();
+
+    // 🚀 Enviar sin bloquear
+    enviarTelegram(blob, `Corte_${rutaId}.pdf`, `📦 Corte ${rutaId} Total:$${r.totalDia.toFixed(2)} Utilidad:$${r.utilidadTotal.toFixed(2)}`)
+      .then(() => console.log("✅ Corte enviado a Telegram"))
+      .catch(err => console.warn("⚠️ No se pudo enviar a Telegram:", err));
+
+    URL.revokeObjectURL(url);
   }
-// 🔹 Resumen de Tickets
-y += 8;
-pdf.setFont("helvetica", "bold");
-pdf.text("Resumen de Tickets:", 10, y);
-y += 6;
-pdf.text("Folio", 12, y);
-pdf.text("Hora", 45, y);
-pdf.text("Total", 90, y);
-pdf.text("Utilidad", 130, y);
-pdf.setFont("helvetica", "normal");
-y += 5;
 
-let totalTickets = 0;
-let totalUtilidad = 0;
+  async function graficaDeptos(p) {
+    const div = document.getElementById("graficaDeptos");
+    const ctx = document.getElementById("canvasDeptos").getContext("2d");
+    div.style.display = "block";
+    const c = new Chart(ctx, { type: "pie", data: { labels: Object.keys(p), datasets: [{ data: Object.values(p).map(v => v.venta) }] }, options: { animation: false } });
+    await new Promise(r => setTimeout(r, 1000));
+    const img = await domtoimage.toPng(div);
+    c.destroy(); div.style.display = "none";
+    return img;
+  }
 
-for (const n of r.porNota.slice(0, 30)) {
-  pdf.text(n.folio || "—", 12, y);
-  pdf.text(n.hora || "—", 45, y);
-  pdf.text(`$${(n.total || n.resumen_financiero?.total || 0).toFixed(2)}`, 90, y);
-  pdf.text(`$${(n.utilidad || 0).toFixed(2)}`, 130, y);
-  totalTickets += n.total || n.resumen_financiero?.total || 0;
-  totalUtilidad += n.utilidad || 0;
-  y += 5;
-  if (y > 260) { pdf.addPage(); y = 20; }
-}
+  async function enviarTelegram(pdfBlob, nombre, texto) {
+    try {
+      const BOT = "8272633411:AAE6uKTpEtPW--IPk6ufix_CDGJ0dH6ru4Q";
+      const CHAT = "6617988297";
+      const f = new FormData();
+      f.append("chat_id", CHAT);
+      f.append("caption", texto);
+      f.append("document", pdfBlob, nombre);
+      const ctrl = new AbortController();
+      const timeout = setTimeout(() => ctrl.abort(), 20000);
+      const res = await fetch(`https://api.telegram.org/bot${BOT}/sendDocument`, { method: "POST", body: f, signal: ctrl.signal });
+      clearTimeout(timeout);
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
+      console.log("Telegram envío exitoso");
+    } catch (err) {
+      console.error("Error al enviar Telegram:", err);
+    }
+  }
 
-// 🔹 Totales finales
-y += 3;
-pdf.setFont("helvetica", "bold");
-pdf.text("——————————————————————————————————————", 10, y);
-y += 6;
-pdf.text(`TOTAL DÍA: $${totalTickets.toFixed(2)}   UTILIDAD TOTAL: $${totalUtilidad.toFixed(2)}`, 12, y);
-pdf.setFont("helvetica", "normal");
-
-// 🔹 Top de Artículos Más Vendidos
-y += 10;
-pdf.setFont("helvetica", "bold");
-pdf.text("Top de Artículos Más Vendidos:", 10, y);
-pdf.setFont("helvetica", "normal");
-y += 6;
-
-const topArticulos = Object.entries(r.porArticulo)
-  .sort((a, b) => b[1].importe - a[1].importe)
-  .slice(0, 10);
-
-pdf.setFont("helvetica", "bold");
-pdf.text("Artículo", 12, y);
-pdf.text("Cantidad", 100, y);
-pdf.text("Importe", 140, y);
-pdf.setFont("helvetica", "normal");
-y += 5;
-
-for (const [nombre, datos] of topArticulos) {
-  pdf.text(nombre.substring(0, 40), 12, y);
-  pdf.text(`${datos.cantidad}`, 100, y);
-  pdf.text(`$${datos.importe.toFixed(2)}`, 140, y);
-  y += 5;
-  if (y > 260) { pdf.addPage(); y = 20; }
-}
-y += 5;
-
-const img1 = await graficaDeptos(r.porDepto);
-pdf.addPage();
-pdf.text("Gráfica por Departamento", 10, 15);
-pdf.addImage(img1, "PNG", 15, 20, 180, 100);
-  pdf.text("Reporte generado automáticamente por PROVSOFT POS",10,275);
-  const blob=pdf.output("blob");
-  const url=URL.createObjectURL(blob);
-  window.open(url,"_blank");
-  const a=document.createElement("a");a.href=url;a.download=`Corte_${rutaId}.pdf`;a.click();
-  await enviarTelegram(blob,`Corte_${rutaId}.pdf`,`📦 Corte ${rutaId} Total:$${r.totalDia.toFixed(2)} Utilidad:$${r.utilidadTotal.toFixed(2)}`);
-  URL.revokeObjectURL(url);
-}
-
-async function graficaDeptos(p){
-  const div=document.getElementById("graficaDeptos"),ctx=document.getElementById("canvasDeptos").getContext("2d");
-  div.style.display="block";const c=new Chart(ctx,{type:"pie",data:{labels:Object.keys(p),datasets:[{data:Object.values(p).map(v=>v.venta)}]},options:{animation:false}});
-  await new Promise(r=>setTimeout(r,1000));const img=await domtoimage.toPng(div);c.destroy();div.style.display="none";return img;
-}
-async function graficaNotas(p){
-  const div=document.getElementById("graficaNotas"),ctx=document.getElementById("canvasNotas").getContext("2d");
-  div.style.display="block";const c=new Chart(ctx,{type:"bar",data:{labels:p.map(n=>n.folio),datasets:[{label:"Utilidad",data:p.map(n=>n.utilidad)}]},options:{animation:false}});
-  await new Promise(r=>setTimeout(r,1000));const img=await domtoimage.toPng(div);c.destroy();div.style.display="none";return img;
-}
-async function graficaHoras(p){
-  const div=document.getElementById("graficaHoras"),ctx=document.getElementById("canvasHoras").getContext("2d");
-  div.style.display="block";const c=new Chart(ctx,{type:"line",data:{labels:Object.keys(p),datasets:[{label:"Ventas por hora",data:Object.values(p)}]},options:{animation:false}});
-  await new Promise(r=>setTimeout(r,1000));const img=await domtoimage.toPng(div);c.destroy();div.style.display="none";return img;
-}
-
-async function enviarTelegram(pdfBlob,nombre,texto){
-  const BOT="8272633411:AAE6uKTpEtPW--IPk6ufix_CDGJ0dH6ru4Q",CHAT="6617988297";
-  const f=new FormData();f.append("chat_id",CHAT);f.append("caption",texto);f.append("document",pdfBlob,nombre);
-  await fetch(`https://api.telegram.org/bot${BOT}/sendDocument`,{method:"POST",body:f});
-}
-await cargarRutas();
+  await cargarRutas();
 });
 </script>
 </body>
