--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -87,8 +87,10 @@
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, collection, getDocs, query, where, addDoc, serverTimestamp } 
-from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { 
+  getFirestore, collection, getDocs, query, where, addDoc, updateDoc, doc, serverTimestamp 
+} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
 
 document.addEventListener("DOMContentLoaded", async () => {
   const firebaseConfig = {
@@ -178,58 +180,75 @@ document.addEventListener("DOMContentLoaded", async () => {
     });
   }); // ← Cierra el listener
 
-  // 👇 FUNCIONES GLOBALES (fuera del listener)
-  async function generarCorteAnalitico(rutaId) {
-    const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
-    const snap = await getDocs(qVentas);
-    const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-    if (!ventas.length) return;
-
-    const porDepto = {}, porNota = [], porArticulo = {};
-    let totalDia = 0, utilidadTotal = 0;
-
-    for (const v of ventas) {
-      totalDia += v.total || v.resumen_financiero?.total || 0;
-      utilidadTotal += v.utilidad_total || 0;
-      const hora = (v.fecha_txt || "").split(",")[1]?.trim() || "";
-      porNota.push({ folio: v.folio || "—", total: v.total || 0, utilidad: v.utilidad_total || 0, hora });
-
-      for (const det of (v.detalle || [])) {
-        const nombreArt = det.nombre?.toUpperCase() || "SIN NOMBRE";
-        if (!porArticulo[nombreArt]) porArticulo[nombreArt] = { cantidad: 0, importe: 0 };
-        porArticulo[nombreArt].cantidad += det.cantidad || 0;
-        porArticulo[nombreArt].importe += det.importe || det.precio_unit * det.cantidad || 0;
-
-        const dep = det.departamento_info?.nombre?.toUpperCase() || "SIN DEPTO";
-        const venta = det.importe || det.precio_unit * det.cantidad || 0;
-        const costo = det.costo_total || det.costo_unit * det.cantidad || 0;
-        const util = det.utilidad || (venta - costo);
-        if (!porDepto[dep]) porDepto[dep] = { venta: 0, utilidad: 0 };
-        porDepto[dep].venta += venta;
-        porDepto[dep].utilidad += util;
-      }
-    }
-
-    const resumen = {
-      nombreCorte: ventas[0]?.usuarioNombre || ventas[0]?.atendio || "Desconocido",
-      totalDia, utilidadTotal,
-      totalTickets: ventas.length,
-      porDepto, porNota, porArticulo
-    };
-
-    await addDoc(collection(db, "cortes_globales"), {
-      rutaId, fecha: serverTimestamp(), creado_en: new Date().toISOString(),
-      realizado_por: resumen.nombreCorte, total_registros: resumen.totalTickets, resumen
-    });
-
-    await generarPDFyEnviar(resumen, rutaId);
+async function generarCorteAnalitico(rutaId) {
+  const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
+  const snap = await getDocs(qVentas);
+  const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
+  if (!ventas.length) {
+    console.warn(`No hay ventas pendientes para ${rutaId}`);
+    return;
   }
+
+  const porDepto = {}, porNota = [], porArticulo = {};
+  let totalDia = 0, utilidadTotal = 0;
+
+  // 🔹 Recopilar totales
+  for (const v of ventas) {
+    totalDia += v.total || v.resumen_financiero?.total || 0;
+    utilidadTotal += v.utilidad_total || 0;
+    const hora = (v.fecha_txt || "").split(",")[1]?.trim() || "";
+    porNota.push({ folio: v.folio || "—", total: v.total || 0, utilidad: v.utilidad_total || 0, hora });
+
+    for (const det of (v.detalle || [])) {
+      const nombreArt = det.nombre?.toUpperCase() || "SIN NOMBRE";
+      if (!porArticulo[nombreArt]) porArticulo[nombreArt] = { cantidad: 0, importe: 0 };
+      porArticulo[nombreArt].cantidad += det.cantidad || 0;
+      porArticulo[nombreArt].importe += det.importe || det.precio_unit * det.cantidad || 0;
+
+      const dep = det.departamento_info?.nombre?.toUpperCase() || "SIN DEPTO";
+      const venta = det.importe || det.precio_unit * det.cantidad || 0;
+      const costo = det.costo_total || det.costo_unit * det.cantidad || 0;
+      const util = det.utilidad || (venta - costo);
+      if (!porDepto[dep]) porDepto[dep] = { venta: 0, utilidad: 0 };
+      porDepto[dep].venta += venta;
+      porDepto[dep].utilidad += util;
+    }
+  }
+
+  const resumen = {
+    nombreCorte: ventas[0]?.usuarioNombre || ventas[0]?.atendio || "Desconocido",
+    totalDia, utilidadTotal,
+    totalTickets: ventas.length,
+    porDepto, porNota, porArticulo
+  };
+
+  // 🔹 Guardar resumen del corte en la colección cortes_globales
+  await addDoc(collection(db, "cortes_globales"), {
+    rutaId,
+    fecha: serverTimestamp(),
+    creado_en: new Date().toISOString(),
+    realizado_por: resumen.nombreCorte,
+    total_registros: resumen.totalTickets,
+    resumen
+  });
+
+  // 🔹 Marcar las ventas como cortadas
+  for (const v of ventas) {
+    const ventaRef = doc(db, "rutas_venta", v.id);
+    await updateDoc(ventaRef, { cortado: true });
+  }
+  console.log(`✅ ${ventas.length} ventas marcadas como cortadas para ${rutaId}`);
+
+  // 🔹 Generar el PDF y enviar a Telegram
+  await generarPDFyEnviar(resumen, rutaId);
+}
 
   async function generarPDFyEnviar(r, rutaId) {
     overlayText.innerText = "🧾 Generando PDF...";
 
     const { jsPDF } = window.jspdf;
     const pdf = new jsPDF({ format: "letter", unit: "mm" });
+fimport { 
     pdf.setFont("helvetica", "bold");
     pdf.text(`CORTE ANALÍTICO – ${rutaId}`, 10, 15);
     pdf.setFont("helvetica", "normal");
