--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -1548,5 +1548,14 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 
 </script>
+<script src="app.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./sw.js').then(() => {
+      console.log('✅ Service Worker activo');
+    });
+  }
+</script>
+
 </body>
 </html>
