--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     <a href="POSMOVIL/REGENERALVENTAS.html">🔎 Reporte Ventas </a>
   </div>
 
+  <div class="apps">
+    <a href="POSVTAV2/index.html">🔎 POS MOVIL V2</a>
+  </div>
+  
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
