--- a/POSVTAV2/resumen.html
+++ b/POSVTAV2/resumen.html
@@ -63,6 +63,18 @@
 <body>
 
 <h2>📋 Resumen de Ventas</h2>
+<!-- 🔹 Aviso de filtro activo -->
+<p id="filtroAviso" style="
+  text-align:center; 
+  color:#e0f7ff; 
+  font-weight:600; 
+  margin-top:-4px; 
+  margin-bottom:14px; 
+  font-size:15px;
+">
+  🔄 Mostrando ventas pendientes de corte del día
+</p>
+
 <!-- 🔹 Mini dashboard resumen -->
 <div id="dashboard" style="
   max-width:700px; margin:0 auto 10px; 
