--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   <div class="apps">
     <a href="POSVTAV2/index.html">🔎 POS MOVIL V2</a>
   </div>
+  <div class="apps">
+    <a href="POSVTAV2/cortes_pendientes2.html">🔎 CORTES PENDIENTES V2 </a>
+  </div>
   
   <footer>
     Powered by <b>PROVSOFT</b>
